Update OrderItem model and related code