@@ -6,14 +6,12 @@ import no.fint.model.felles.kompleksedatatyper.Identifikator;
 import no.fint.model.resource.Link;
 import no.fint.model.resource.okonomi.faktura.FakturagrunnlagResource;
 import no.fint.model.resource.okonomi.faktura.FakturalinjeResource;
-import no.fint.model.resource.okonomi.faktura.FakturamottakerResource;
 import org.springframework.stereotype.Service;
 
 import java.time.ZoneId;
 import java.util.Collections;
 import java.util.Date;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class InvoiceFactory {
@@ -27,16 +25,12 @@ public class InvoiceFactory {
     public FakturagrunnlagResource createInvoice(Claim claim) {
         List<FakturalinjeResource> invoiceLines = claim.getOrderItems().stream().map(orderItem -> {
             FakturalinjeResource invoiceLine = new FakturalinjeResource();
-            if (orderItem.getItemPrice() != null) {
-                invoiceLine.setPris(orderItem.getItemPrice());
-            } else {
-                invoiceLine.setPris(orderItem.getLineitem().getItemPrice());
-            }
+            invoiceLine.setPris(orderItem.getItemPrice() != null ? orderItem.getItemPrice() : orderItem.getOriginalItemPrice());
             invoiceLine.setAntall(orderItem.getItemQuantity() / 1.0f);
             invoiceLine.setFritekst(Collections.singletonList(orderItem.getDescription()));
-            invoiceLine.addVare(Link.with(orderItem.getLineitem().getUri()));
+            invoiceLine.addVare(Link.with(orderItem.getItemUri()));
             return invoiceLine;
-        }).collect(Collectors.toList());
+        }).toList();
 
 
         FakturagrunnlagResource invoice = new FakturagrunnlagResource();
